# routes/bookings.js
@@ -1,58 +1,0 @@
-const express = require("express");
-const router = express.Router();
-const Booking = require("../models/Booking");
-
-router.get("/", async (req, res) => {
-  try {
-    const bookings = await Booking.find();
-    res.status(200).json(bookings);
-  } catch (error) {
-    res.status(500).json({ message: error.message });
-  }
-});
-
-router.post("/", async (req, res) => {
-  try {
-    const booking = await Booking.create(req.body);
-    res.status(201).json(booking);
-  } catch (error) {
-    res.status(400).json({ message: error.message });
-  }
-});
-
-router.put("/:id", async (req, res) => {
-  try {
-    const booking = await Booking.findByIdAndUpdate(
-      req.params.id,
-      req.body,
-      { new: true }
-    );
-
-    res.status(200).json(booking);
-  } catch (error) {
-    res.status(400).json({ message: error.message });
-  }
-});
-
-router.delete("/:id", async (req, res) => {
-  try {
-    const booking = await Booking.findByIdAndDelete(req.params.id);
-
-    if (!booking) {
-      return res.status(404).json({
-        message: "Booking not found"
-      });
-    }
-
-    res.status(200).json({
-      message: "Booking deleted successfully",
-      deletedBooking: booking
-    });
-
-  } catch (error) {
-    res.status(500).json({
-      message: error.message
-    });
-  }
-});
-module.exports = router;
