# routes/destinationsRoutes.js
@@ -1,0 +1,9 @@
+const router = require("express").Router();
+const c = require("../controllers/destinationsController");
+
+router.get("/", c.getAll);
+router.post("/", c.create);
+router.put("/:id", c.update);
+router.delete("/:id", c.delete);
+
+module.exports = router;
