# routes/tours.js
@@ -1,48 +1,0 @@
-const express = require("express");
-const router = express.Router();
-const Tour = require("../models/Tour");
-
-router.get("/", async (req, res) => {
-  try {
-    const tours = await Tour.find();
-    res.status(200).json(tours);
-  } catch (error) {
-    res.status(500).json({ message: error.message });
-  }
-});
-
-router.post("/", async (req, res) => {
-  try {
-    const tour = await Tour.create(req.body);
-    res.status(201).json(tour);
-  } catch (error) {
-    res.status(400).json({ message: error.message });
-  }
-});
-
-router.put("/:id", async (req, res) => {
-  try {
-    const tour = await Tour.findByIdAndUpdate(
-      req.params.id,
-      req.body,
-      { new: true }
-    );
-
-    res.status(200).json(tour);
-  } catch (error) {
-    res.status(400).json({ message: error.message });
-  }
-});
-
-router.delete("/:id", async (req, res) => {
-  try {
-    await Tour.findByIdAndDelete(req.params.id);
-    res.status(200).json({
-      message: "Tour deleted"
-    });
-  } catch (error) {
-    res.status(500).json({ message: error.message });
-  }
-});
-
-module.exports = router;
