# routes/usersRoutes.js
@@ -1,0 +1,15 @@
+const express = require("express");
+const router = express.Router();
+const usersController = require("../controllers/usersController");
+const { verifyToken } = require("../utils/jwt");
+
+// PUBLIC ROUTE (optional depending on rubric)
+router.post("/", usersController.createUser);
+
+// PROTECTED ROUTES
+router.get("/", verifyToken, usersController.getAllUsers);
+router.get("/:id", verifyToken, usersController.getUserById);
+router.put("/:id", verifyToken, usersController.updateUser);
+router.delete("/:id", verifyToken, usersController.deleteUser);
+
+module.exports = router;
